--- a/app/src/main/res/layout/activity_statistical.xml
+++ b/app/src/main/res/layout/activity_statistical.xml
@@ -29,7 +29,8 @@
         android:id="@+id/text_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:textSize="20dp"
+        android:gravity="center"
         android:textColor="@color/colorBlack"
         android:text="Hôm nay : 0"
         android:layout_centerHorizontal="true"
@@ -39,7 +40,8 @@
         android:id="@+id/text_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:textSize="20dp"
+        android:gravity="center"
         android:layout_below="@id/text_today"
         android:textColor="@color/colorBlack"
         android:text="Tháng này : 0"
@@ -50,7 +52,8 @@
         android:id="@+id/text_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:textSize="20dp"
+        android:gravity="center"
         android:textColor="@color/colorBlack"
         android:text="Năm nay : 0"
         android:layout_below="@+id/text_month"
