--- a/app/src/main/res/menu/menu_profile_user.xml
+++ b/app/src/main/res/menu/menu_profile_user.xml
@@ -7,21 +7,25 @@
         <item
             
             android:id="@+id/nav_transaction_history"
+            android:icon="@drawable/ic_baseline_play_arrow_24"
             android:title="@string/menu_transaction_history"
             />
 
         <item
             android:id="@+id/nav_feedback"
+            android:icon="@drawable/ic_baseline_play_arrow_24"
             android:title="@string/menu_feedback"
             />
 
         <item
             android:id="@+id/nav_change_password"
             android:title="@string/menu_changepassword"
+            android:icon="@drawable/ic_baseline_play_arrow_24"
             />
 
         <item
             android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_baseline_play_arrow_24"
             android:title="@string/menu_logout"
 
             />
