--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1700,11 +1700,11 @@
     <style name="img_fragment_home">
         <item name="android:layout_width">35dp</item>
         <item name="android:layout_height">35dp</item>
-        <item name="android:src">@drawable/ic_search</item>
+        <item name="android:src">@drawable/ic_baseline_search_24</item>
     </style>
 
     <style name="scroll_fragment_home">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
     </style>
 
@@ -1959,7 +1959,6 @@
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_marginTop">16dp</item>
-        <item name="android:src">@mipmap/ic_launcher_round</item>
     </style>
 
     <style name="tv1_nav_header">
